erDiagram
    USERS {
        uuid id PK
        string username UK
        string role
        string status
        datetime created_at
        datetime deleted_at
    }

    USER_AUTH_PROVIDERS {
        uuid user_id PK
        string provider PK
    }

    USER_PROFILES {
        uuid id PK
        uuid user_id FK
        string email UK
        string phone_number UK
        string display_name
        datetime created_at
        datetime deleted_at
    }

    USER_PROFILE_INFO_VISIBILITY {
        uuid id PK
        uuid user_id FK
        boolean display_name_visible
        boolean phone_visible
        boolean email_visible
    }

    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        uuid family_id
        string token_hash
        datetime expires_at
        datetime revoked_at
    }

    OTPS {
        uuid id PK
        uuid user_id FK
        string otp_code
        string type
        datetime expired_at
        datetime used_at
    }

    CONVERSATIONS {
        uuid id PK
        string type
        uuid created_by FK
        uuid last_message_id
        uuid last_sender_id
        datetime last_message_at
    }

    CONVERSATION_MEMBERS {
        uuid id PK
        uuid conversation_id FK
        uuid user_id FK
        string role
        datetime joined_at
        datetime left_at
    }

    MESSAGES {
        uuid id PK
        uuid conversation_id FK
        uuid sender_id FK
        string type
        string content
        datetime created_at
        datetime deleted_at
    }

    ATTACHMENTS {
        uuid id PK
        uuid message_id FK
        string file_url
        string file_type
        bigint file_size
        datetime created_at
    }

    MESSAGE_STATUS {
        uuid id PK
        uuid message_id FK
        uuid user_id FK
        string status
        datetime created_at
    }

    FRIENDSHIPS {
        uuid id PK
        uuid requester_id FK
        uuid addressee_id FK
        uuid user_low_id
        uuid user_high_id
        string status
        datetime created_at
    }

    CONTACTS {
        uuid id PK
        uuid owner_id FK
        uuid target_id FK
        boolean blocked
        datetime created_at
        datetime deleted_at
    }

    POST {
        uuid id PK
        uuid user_id FK
        string content
        datetime created_at
        datetime deleted_at
    }

    COMMENT {
        uuid id PK
        uuid post_id FK
        uuid parent_comment_id FK
        uuid user_id FK
        string content
        datetime created_at
        datetime deleted_at
    }

    COMMENT_REACTION {
        uuid id PK
        uuid comment_id FK
        uuid user_id FK
        string type
        datetime created_at
    }

    COMMENT_REPORT {
        uuid id PK
        uuid comment_id FK
        uuid post_id FK
        uuid reported_by_user_id FK
        string status
        datetime created_at
    }

    HASHTAG {
        uuid id PK
        string normalized_name UK
    }

    POST_HASHTAG {
        uuid post_id PK
        uuid hashtag_id PK
        datetime created_at
    }

    POST_MEDIA {
        uuid id PK
        uuid post_id FK
        string media_url
        string media_type
        int sort_order
    }

    LIKE {
        uuid id PK
        uuid post_id FK
        uuid user_id FK
        string type
        datetime created_at
    }

    POST_REPORT {
        uuid id PK
        uuid post_id FK
        uuid reported_by_user_id FK
        string status
        datetime created_at
    }

    SAVED_POST {
        uuid id PK
        uuid post_id FK
        uuid user_id FK
        datetime created_at
    }

    STORY {
        uuid id PK
        uuid user_id FK
        string media_url
        string media_type
        datetime expired_at
        boolean is_deleted
    }

    STORY_REACTION {
        uuid id PK
        uuid story_id FK
        uuid user_id FK
        string type
        datetime created_at
    }

    STORY_VIEW {
        uuid id PK
        uuid story_id FK
        uuid viewer_id FK
        datetime viewed_at
    }

    STORY_REPORT {
        uuid id PK
        uuid story_id FK
        uuid reported_by_user_id FK
        string status
        datetime created_at
    }

    USER_REPORT {
        uuid id PK
        uuid target_user_id FK
        uuid reported_by_user_id FK
        string status
        datetime created_at
    }

    NOTIFICATION {
        uuid id PK
        uuid user_id FK
        uuid actor_user_id FK
        uuid post_id FK
        uuid comment_id FK
        string type
        boolean is_read
        datetime created_at
    }

    APP_REVIEW {
        uuid id PK
        uuid user_id FK
        int rating
        boolean is_hidden
        datetime created_at
    }

    ADMIN_AUDIT_LOG {
        uuid id PK
        uuid admin_user_id FK
        uuid target_user_id FK
        string action_type
        string entity_type
        datetime created_at
    }

    USERS ||--o{ USER_AUTH_PROVIDERS : auth_providers
    USERS ||--|| USER_PROFILES : profile
    USERS ||--|| USER_PROFILE_INFO_VISIBILITY : privacy
    USERS ||--o{ REFRESH_TOKENS : refresh_tokens
    USERS ||--o{ OTPS : otps
    USERS ||--o{ CONVERSATIONS : created_conversations
    CONVERSATIONS ||--o{ CONVERSATION_MEMBERS : members
    USERS ||--o{ CONVERSATION_MEMBERS : membership
    CONVERSATIONS ||--o{ MESSAGES : messages
    USERS ||--o{ MESSAGES : sent_messages
    MESSAGES ||--o{ ATTACHMENTS : attachments
    MESSAGES ||--o{ MESSAGE_STATUS : delivery_status
    USERS ||--o{ MESSAGE_STATUS : message_receipts
    USERS ||--o{ FRIENDSHIPS : requester_side
    USERS ||--o{ FRIENDSHIPS : addressee_side
    USERS ||--o{ CONTACTS : owner_side
    USERS ||--o{ CONTACTS : target_side

    USERS ||--o{ POST : authored_posts
    POST ||--o{ COMMENT : comments
    COMMENT ||--o{ COMMENT : replies
    USERS ||--o{ COMMENT : authored_comments
    COMMENT ||--o{ COMMENT_REACTION : reactions
    USERS ||--o{ COMMENT_REACTION : reacted_comments
    COMMENT ||--o{ COMMENT_REPORT : reports
    POST ||--o{ COMMENT_REPORT : reported_comment_post
    USERS ||--o{ COMMENT_REPORT : comment_reporters

    POST ||--o{ POST_MEDIA : media
    POST ||--o{ LIKE : likes
    USERS ||--o{ LIKE : liked_posts
    POST ||--o{ POST_HASHTAG : post_tags
    HASHTAG ||--o{ POST_HASHTAG : hashtag_posts
    POST ||--o{ POST_REPORT : reports
    USERS ||--o{ POST_REPORT : post_reporters
    POST ||--o{ SAVED_POST : saves
    USERS ||--o{ SAVED_POST : saved_posts

    USERS ||--o{ STORY : stories
    STORY ||--o{ STORY_REACTION : reactions
    USERS ||--o{ STORY_REACTION : reacted_stories
    STORY ||--o{ STORY_VIEW : views
    USERS ||--o{ STORY_VIEW : story_viewers
    STORY ||--o{ STORY_REPORT : reports
    USERS ||--o{ STORY_REPORT : story_reporters

    USERS ||--o{ USER_REPORT : target_users
    USERS ||--o{ USER_REPORT : reporting_users
    USERS ||--o{ NOTIFICATION : notification_recipients
    USERS ||--o{ NOTIFICATION : notification_actors
    POST ||--o{ NOTIFICATION : post_notifications
    COMMENT ||--o{ NOTIFICATION : comment_notifications
    USERS ||--o{ APP_REVIEW : app_reviews
    USERS ||--o{ ADMIN_AUDIT_LOG : admin_logs
    USERS ||--o{ ADMIN_AUDIT_LOG : audit_targets